--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -3,9 +3,13 @@ name: Build and Release
 on:
   push:
     branches: [main]
-    tags:
-      - "v*"
+  tags:
+    - "v*"
   workflow_dispatch:
+
+permissions:
+  contents: write  # Required to create releases and upload assets
+  actions: read    # Required to read workflow data
 
 jobs:
   build:
