fix: use standard ubuntu-latest runner for all Linux builds
- Replace ubuntu-latest-8-cores with ubuntu-latest
- ubuntu-latest-8-cores is not a standard GitHub-hosted runner label
- Both Linux builds will run on standard ubuntu-latest runners

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -29,7 +29,7 @@ jobs:
             output: dist/ubuntu/dotfiles
             archive_name: dotfiles-linux-x64
             platform: linux
-          - os: ubuntu-latest-8-cores
+          - os: ubuntu-latest
             output: dist/ubuntu-arm/dotfiles
             archive_name: dotfiles-linux-arm64
             platform: linux
